	  fixed detection if files with the given extension exist;
	  specially treat z80 faily: z180, r2k and gbz80 targets
	* support/scripts/sdcc.nsi: added Rabbit 2000 support
	* sdas/asrab/asrab.vcxproj, sdas/asrab/asrab.vcxproj.filters,
	  sdcc.sln, src/src.vcxproj, src/src.vcxproj.filters, 
	  src/z80/z80.vcxproj, src/z80/z80.vcxproj.filters:
	  added sdasrab assembler to the project
	* src/SDCCval.c: fixed long long constant suffix
	* .version, doc/sdccman.lyx: bumped version to 3.0.6

2011-10-11 Borut Razem <borut.razem AT gmail.com>

	* device/include/Makefile.in: install/copy only existing files
	* src/SDCCicode.c: disable -O2 optimization for all i386 platforms;
	  see patch #3285611: Workaround gcc 4.6.0 bug with sdcc 3.0.0

2011-10-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	*  configure.in:
	  Fixed bug #3413688.

2011-10-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sdas/asrab/rabbit.h,
	  sdas/asrab/rabbitadr.c,
	  sdas/asrab/rabbitmch.c:
	  Leland Morrison's fix for ld n (hl), hl and ld hl, n (hl).
	* src/z80/peeph-r2k.def:
	  Enable peepholes using ld hl, n (hl).

2011-10-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/main.c,
	  src/z80/main.c,
	  src/z80/z80.h:
	  Fix code generation for handling of rematerialization by the new
	  register allocator, enable it for the ports with exact cost function
	  and remove the option.

2011-10-10 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: removed include/z80 added include/z180

2011-10-09 Raphael Neider <rneider AT web.de>

	* src/SDCCval.c (constVal): avoid compiler warning
	* src/pic16/gen.c (genPcall): do not clobber interrupt flags in
	  INTCON during indirect function call, closes #3420588

2011-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* Merge the Rabbit2000 branch.

2011-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/z80/z180.h,
	  device/include/z80/types.h,